#226 Correct align for Flashcards

--- a/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.less
@@ -1175,20 +1175,21 @@ commentAnswersCount {
 
     > div, #flashCard-frontContent > p {
         min-height: inherit;
-        display: flex;
         flex-direction: column;
         align-items: center;
         align-content: center;
         justify-content: center;
+        display: inline;
     }
 
     #flashCard-back > p {
         width: 100%;
-        display: flex;
         flex-direction: column;
-        align-items: center;
+        display: inline;
         align-content: center;
         justify-content: center;
+        align-items: center;
+
 
         img {
             max-width: 60%;
@@ -1216,7 +1217,7 @@ commentAnswersCount {
     }
 
     #flashCard-frontContent, #flashCard-back {
-        padding:15px;
+        padding: 15px;
         display: flex;
         flex-direction: column;
         align-items: center;
